--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Twenty by HTML5 UP</title>
+		<title>Kavitha Arur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,10 +17,13 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">Kavitha Arur</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
+							<li class="current"><a href="index.html">CV</a></li>
+							<li class="current"><a href="index.html">Research</a></li>
+							<li class="current"><a href="index.html">Outreach</a></li>
 							<li class="submenu">
 								<a href="#">Layouts</a>
 								<ul>
@@ -28,19 +31,8 @@
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -57,16 +49,14 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>HELLO!</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p>I am currently a graduate student at Texas Tech University. 
 						<br />
-						responsive template
-						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						I work on X-ray timing analysis from accreting black holes. 
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#contact" class="button fit scrolly">Get in Touch</a></li>
 							</ul>
 						</footer>
 
@@ -246,11 +236,8 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="mailto:kavitha.arur [at] ttu.edu" class="icon brands circle fa-envelope"><span class="label">Email</span></a></li>
+
 					</ul>
 
 					<ul class="copyright">
