Updated icons and navigation

--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
 							<li class="current"><a href="index.html">CV</a></li>
 							<li class="current"><a href="index.html">Research</a></li>
 							<li class="current"><a href="index.html">Outreach</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</li>
 						</ul>
 					</nav>
 				</header>
@@ -49,14 +40,14 @@
 					<div class="inner">
 
 						<header>
-							<h2>HELLO!</h2>
+							<h2>HELLO! I'm Kavitha Arur</h2>
 						</header>
 						<p>I am currently a graduate student at Texas Tech University. 
 						<br />
 						I work on X-ray timing analysis from accreting black holes. 
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#contact" class="button fit scrolly">Get in Touch</a></li>
+								<li><a href="contact.html" class="button fit scrolly">Get in Touch</a></li>
 							</ul>
 						</footer>
 
@@ -236,12 +227,12 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="mailto:kavitha.arur [at] ttu.edu" class="icon brands circle fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:kavitha.arur [at] ttu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Kavitha Arur</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
