Updated contact section style

--- a/contact.html
+++ b/contact.html
@@ -35,25 +35,31 @@
 					</header>
 
 					<!-- One -->
-						<section class="wrapper style2 container special-alt">
-							<div class="row gtr-50">
-								<div class="col-8 col-12-narrower">
+						<section class="wrapper style3 container special">
+							<header class="major">
+								<h2>Kavitha Arur</h2>
+								<h1>SCI 003</h1>
+							</header>
 
-									<header>
-										<h2>Kavitha Arur</h2>
-										<h1> SCI 003 </h1>
-									</header>
+							<div class="row">
+								<div class="col-6 col-12-narrower">
+
+									<section>
 									<p> Texas Tech University <br /> 
 									Department of Physics and Astronomy, MS 1051<br />
 									Lubbock, TX 79409-1051</p>
+									</section>
 
 								</div>
-								<div class="col-4 col-12-narrower imp-narrower">
-								<p>Email: <a href="mailto:kavitha.arur@ttu.edu">kavitha.arur[AT]ttu.edu</a><br />
-						Phone: <a href="tel:8067422011">806.742.2011</a><br />
+								<div class="col-6 col-12-narrower">
+
+									<section>
+									<p>Email: <a href="mailto:kavitha.arur@ttu.edu">kavitha.arur[AT]ttu.edu</a><br />
+									Phone: <a href="tel:8067422011">806.742.2011</a><br />
+									</section>
 
 								</div>
-							</div>
+							</div>		
 						</section>
 
 
