--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li class="current"><a href="index.html">CV</a></li>
-							<li class="current"><a href="index.html">Research</a></li>
+							<li class="current"><a href="#two">Research</a></li>
 							<li class="current"><a href="index.html">Outreach</a></li>
+							<li class="current"><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -39,9 +40,7 @@
 					-->
 					<div class="inner">
 
-						<header>
 							<h2>HELLO! I'm Kavitha Arur</h2>
-						</header>
 						<p>I am currently a graduate student at Texas Tech University. 
 						<br />
 						I work on X-ray timing analysis from accreting black holes. 
@@ -103,7 +102,7 @@
 						</section>
 
 					<!-- Two -->
-						<section class="wrapper style1 container special">
+						<section id="two" class="wrapper style1 container special">
 							<div class="row">
 								<div class="col-4 col-12-narrower">
 
