Updated link to CV

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="current"><a href="index.html">CV</a></li>
-							<li class="current"><a href="#two">Research</a></li>
+							<li class="current"><a href="index.html">Research</a></li>
+							<li class="current"><a href="#two">CV</a></li>
 							<li class="current"><a href="index.html">Outreach</a></li>
 							<li class="current"><a href="contact.html">Contact</a></li>
 						</ul>
@@ -39,7 +39,6 @@
 						appropriate (<br />).
 					-->
 					<div class="inner">
-
 							<h2>HELLO! I'm Kavitha Arur</h2>
 						<p>I am currently a graduate student at Texas Tech University. 
 						<br />
@@ -107,36 +106,13 @@
 								<div class="col-4 col-12-narrower">
 
 									<section>
-										<span class="icon solid featured fa-check"></span>
+										<span class="icon solid featured fa-clipboard"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Curriculum Vitae</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>You can find a copy of my CV <a href="https://github.com/karur/homepage/CV_KArur.pdf">here.</a></p>
 									</section>
 
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Probably Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
 							</div>
 						</section>
 
@@ -226,7 +202,7 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="mailto:kavitha.arur [at] ttu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:kavitha.arur@ttu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 
 					</ul>
 
