Updated research blurb

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="current"><a href="index.html">Research</a></li>
+							<li class="current"><a href="#one">Research</a></li>
 							<li class="current"><a href="#two">CV</a></li>
 							<li class="current"><a href="index.html">Outreach</a></li>
 							<li class="current"><a href="contact.html">Contact</a></li>
@@ -55,29 +55,17 @@
 
 			<!-- Main -->
 				<article id="main">
-
-					<header class="special container">
-						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
-						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
-						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
-					</header>
-
 					<!-- One -->
-						<section class="wrapper style2 container special-alt">
+						<section id="one" class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
 								<div class="col-8 col-12-narrower">
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>Research</h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+									<p>My primary research is focused on X-ray binaries, where a compact object such as a neutron star or black hole accretes material from a nearby companion star. 
+										For my PhD thesis, I am applying a higher order time series analysis technique called the bispectrum to Quasi Periodic Oscillations (QPOs) from black hole binaries. 
+									By using this new (to astronomy!) technique, we can learn a lot about the geometry of the regions close to the black hole where the high nergy X-rays originate. </p>
 									<footer>
 										<ul class="buttons">
 											<li><a href="#" class="button">Find Out More</a></li>
@@ -86,16 +74,7 @@
 
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-
-									<ul class="featured-icons">
-										<li><span class="icon fa-clock"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon solid fa-laptop"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon solid fa-inbox"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon solid fa-lock"><span class="label">Feature 5</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Feature 6</span></span></li>
-									</ul>
-
+									<img alt="" src="images/black_hole.jpg";"><br>
 								</div>
 							</div>
 						</section>
@@ -110,7 +89,7 @@
 										<header>
 											<h3>Curriculum Vitae</h3>
 										</header>
-										<p>You can find a copy of my CV <a href="https://github.com/karur/homepage/CV_KArur.pdf">here.</a></p>
+										<p>You can find a copy of my CV <a href="https://karur.github.io/homepage/CV_KArur.pdf">here.</a></p>
 									</section>
 
 							</div>
