--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									</header>
 									<p>My primary research is focused on X-ray binaries, where a compact object such as a neutron star or black hole accretes material from a nearby companion star. 
 										For my PhD thesis, I am applying a higher order time series analysis technique called the bispectrum to Quasi Periodic Oscillations (QPOs) from black hole binaries. 
-									By using this new (to astronomy!) technique, we can learn a lot about the geometry of the regions close to the black hole where the high nergy X-rays originate. </p>
+									By using this new (to astronomy!) technique, we can learn a lot about the geometry of the regions close to the black hole where the high energy X-rays originate. </p>
 									<footer>
 										<ul class="buttons">
 											<li><a href="#" class="button">Find Out More</a></li>
@@ -74,7 +74,7 @@
 
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-									<img alt="" src="images/black_hole.jpg";"><br>
+									<img alt="" src="images/cygx1.jpg" style="width: 600px; height: 800px;"><br>
 								</div>
 							</div>
 						</section>
@@ -103,7 +103,7 @@
 							</header>
 
 							<div class="row">
-								<div class="col-6 col-12-narrower">
+								<div class="row.aln-center">
 
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
