--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<!-- Two -->
 						<section id="two" class="wrapper style1 container special">
 							<div class="row">
-								<div class="col-4 col-12-narrower">
+								<div class="row.aln-center">
 
 									<section>
 										<span class="icon solid featured fa-clipboard"></span>
@@ -103,7 +103,7 @@
 							</header>
 
 							<div class="row">
-								<div class="row.aln-center">
+								<div class=col-4 col-12-narrower">
 
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
