--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<!-- Two -->
 						<section id="two" class="wrapper style1 container special">
 							<div class="row">
-								<div class="row.aln-center">
+								<div class="col-4 col-12-narrower">
 
 									<section>
 										<span class="icon solid featured fa-clipboard"></span>
