--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-									<img alt="" src="images/cygx1.jpg" style="width: 600px; height: 800px;"><br>
+									<img alt="" src="images/cygx1.jpg"><br>
 								</div>
 							</div>
 						</section>
