Updated outreach section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li class="current"><a href="#one">Research</a></li>
 							<li class="current"><a href="#two">CV</a></li>
-							<li class="current"><a href="index.html">Outreach</a></li>
+							<li class="current"><a href="#three">Outreach</a></li>
 							<li class="current"><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -74,7 +74,7 @@
 
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-									
+									<img alt="" src="binary.jpg" style="width: 400px; height: 600px;">
 								</div>
 							</div>
 						</section>
@@ -96,10 +96,10 @@
 						</section>
 
 					<!-- Three -->
-						<section class="wrapper style3 container special">
+						<section id="three" class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
+								<h2>Outreach and Service</h2>
 							</header>
 
 							<div class="row">
@@ -108,9 +108,10 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>A Really Fast Train</h3>
+											<h3>Outreach</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p> I am involved in a number of public outreach and mentoring activities. Some highlights include <a href="https://www.depts.ttu.edu/phas/Academics/Preston_Gott_Observatory/astronight.php"Astro Night</a> at TTU, judging at the South Plains Regional Science Fair and 
+										volunteering for after school science demonstrations at local elementary schools.</p>
 									</section>
 
 								</div>
@@ -119,37 +120,15 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>An Airport Terminal</h3>
+											<h3>Service and Collaborations</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p> I am currently the president of the TTU chapter of Sigma Pi Sigma, a national physics honours society.
+										I am also part of the science working group for <a href="https://gammaray.nsstc.nasa.gov/Strobe-X/">STROBE-X</a>, a NASA probe class mission that is currently in the concept study phase.  </p>
 									</section>
 
 								</div>
 							</div>
-							<div class="row">
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Hyperspace Travel</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>And Another Train</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-							</div>
+							
 
 							<footer class="major">
 								<ul class="buttons">
