Updated links in outreach section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-									<img alt="" src="binary.jpg" style="width: 400px; height: 600px;">
+									<img alt="" src="cygx1.jpg" style="width: 400px; height: 600px;">
 								</div>
 							</div>
 						</section>
@@ -110,7 +110,7 @@
 										<header>
 											<h3>Outreach</h3>
 										</header>
-										<p> I am involved in a number of public outreach and mentoring activities. Some highlights include <a href="https://www.depts.ttu.edu/phas/Academics/Preston_Gott_Observatory/astronight.php"Astro Night</a> at TTU, judging at the South Plains Regional Science Fair and 
+										<p> I am involved in a number of public outreach and mentoring activities. Some highlights include <a href="https://www.depts.ttu.edu/phas/Academics/Preston_Gott_Observatory/astronight.php">Astro Night</a> at TTU, judging at the South Plains Regional Science Fair and 
 										volunteering for after school science demonstrations at local elementary schools.</p>
 									</section>
 
