Updated link to ADS

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
 										</header>
 										<p>You can find a copy of my CV <a href="https://karur.github.io/homepage/CV_KArur.pdf">here.</a></p>
 									</section>
+									
+									
+									<section>
+										<span class="icon solid featured fa-clipboard"></span>
+										<header>
+											<h3>ADS Library</h3>
+										</header>
+										<p>A list of my publications can be found on the ADS website <a href="https://ui.adsabs.harvard.edu/user/libraries/uMuLlI1oQ6yZxwsGfNOxhw">here.</a></p>
+									</section>
 
 							</div>
 						</section>
@@ -140,21 +149,6 @@
 
 				</article>
 
-			<!-- CTA -->
-				<section id="cta">
-
-					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
-					</header>
-					<footer>
-						<ul class="buttons">
-							<li><a href="#" class="button primary">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
-						</ul>
-					</footer>
-
-				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
