--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<title>Kavitha Arur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="This is the webpage of Kavitha Arur, astronomy graduate student at Texas Tech University."/>
+		<meta name="keywords" content="Kavitha, Arur, astronomy">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
@@ -130,7 +132,7 @@
 										<header>
 											<h3>Outreach</h3>
 										</header>
-										<p> I am involved in a number of public outreach and mentoring activities. Some highlights include <a href="https://www.depts.ttu.edu/phas/Academics/Preston_Gott_Observatory/astronight.php">Astro Night</a> at TTU, judging at the South Plains Regional Science Fair and 
+										<p> I am involved in a number of public outreach and mentoring activities. Some highlights include Astro Night at TTU, judging at the South Plains Regional Science Fair and 
 										volunteering for after school science demonstrations at local elementary schools.</p>
 									</section>
 
