--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Kavitha Arur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="This is the webpage of Kavitha Arur, astronomy graduate student at Texas Tech University."/>
+		<meta name="description" content="This is the webpage of Kavitha Arur, CRA postdoctoral fellow at Georgia Institute of Technology."/>
 		<meta name="keywords" content="Kavitha, Arur, astronomy">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -53,9 +53,9 @@
 					-->
 					<div class="inner">
 							<h2>HELLO! I'm Kavitha Arur</h2>
-						<p>I am currently a graduate student at Texas Tech University. 
+						<p>I am currently the CRA postdoctoral fellow at Georgia Institute of Technology. 
 						<br />
-						I work on X-ray timing analysis from accreting black holes. 
+						I work on X-ray timing analysis from accreting compact objects. 
 						<footer>
 							<ul class="buttons stacked">
 								<li><a href="contact.html" class="button fit scrolly">Get in Touch</a></li>
@@ -77,7 +77,7 @@
 										<h2>Research</h2>
 									</header>
 									<p>My primary research is focused on X-ray binaries, where a compact object such as a neutron star or black hole accretes material from a nearby companion star. 
-										For my PhD thesis, I am applying a higher order time series analysis technique called the bispectrum to Quasi Periodic Oscillations (QPOs) from black hole binaries. 
+										 I work on applying a higher order time series analysis technique called the bispectrum to Quasi Periodic Oscillations (QPOs) from X-ray binaries. 
 									By using this new (to astronomy!) technique, we can learn a lot about the geometry of the regions close to the black hole where the high energy X-rays originate. </p>
 									<footer>
 										<ul class="buttons">
@@ -144,8 +144,7 @@
 										<header>
 											<h3>Service and Collaborations</h3>
 										</header>
-										<p> I am currently the president of the TTU chapter of Sigma Pi Sigma, a national physics honours society.
-										I am also part of the science working group for <a href="https://gammaray.nsstc.nasa.gov/Strobe-X/">STROBE-X</a>, a NASA probe class mission that is currently in the concept study phase.  </p>
+										<p> I am a part of the science working group for <a href="https://gammaray.nsstc.nasa.gov/Strobe-X/">STROBE-X</a>, a NASA probe class mission that is currently in the concept study phase.  </p>
 									</section>
 
 								</div>
@@ -167,7 +166,7 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="mailto:kavitha.arur@ttu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:karur3@gatech.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 
 					</ul>
 
