--- a/contact.html
+++ b/contact.html
@@ -38,24 +38,23 @@
 						<section class="wrapper style3 container special">
 							<header class="major">
 								<h2>Kavitha Arur</h2>
-								<h1>SCI 003</h1>
+								
 							</header>
 
 							<div class="row">
 								<div class="col-6 col-12-narrower">
 
 									<section>
-									<p> Texas Tech University <br /> 
-									Department of Physics and Astronomy, MS 1051<br />
-									Lubbock, TX 79409-1051</p>
+									<p> Center for Relativistic Astrophysics <br /> 
+									Georgia Institute of Technology<br />
+									Atlanta, GA, 30332</p>
 									</section>
 
 								</div>
 								<div class="col-6 col-12-narrower">
 
 									<section>
-									<p>Email: <a href="mailto:kavitha.arur@ttu.edu">kavitha.arur[AT]ttu.edu</a><br />
-									Phone: <a href="tel:8067422011">806.742.2011</a><br />
+									<p>Email: <a href="mailto:karur3@gatech.edu">karur3[AT]gatech.edu</a><br />
 									</section>
 
 								</div>
@@ -69,7 +68,7 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href=""mailto:kavitha.arur@ttu.edu"" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href=""mailto:karur3@gatech.edu"" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 
 					<ul class="copyright">
