edit image source

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-									<img alt="" src="cygx1.jpg" style="width: 400px; height: 600px;">
+									<img alt="" src="images/cygx1.jpg" style="width: 400px; height: 600px;">
 								</div>
 							</div>
 						</section>
@@ -104,7 +104,8 @@
 										</header>
 										<p>You can find a copy of my CV <a href="https://karur.github.io/homepage/CV_KArur.pdf">here.</a></p>
 									</section>
-									
+								</div>
+								<div class="col-6 col-12-narrower">
 									
 									<section>
 										<span class="icon solid featured fa-clipboard"></span>
