--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 					<ul class="icons">
 						<li><a href="mailto:karur3@gatech.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://www.linkedin.com/in/kavitha-arur-87a369192/" class="icon solid fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/kavitha-arur-87a369192/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 					<ul class="copyright">
