--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					-->
 					<div class="inner">
 							<h2>HELLO! I'm Kavitha Arur</h2>
-						<p>I am currently the CRA postdoctoral fellow at Georgia Institute of Technology. 
+						<p>I am currently a postdoctoral research associate at NASA Goddard/ University of Maryland. 
 						<br />
 						I work on X-ray timing analysis from accreting compact objects. 
 						<footer>
@@ -167,7 +167,7 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="mailto:karur3@gatech.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:karur1@umbc.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://www.linkedin.com/in/kavitha-arur-87a369192/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
