changed contact info

--- a/contact.html
+++ b/contact.html
@@ -45,16 +45,17 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-									<p> Center for Relativistic Astrophysics <br /> 
-									Georgia Institute of Technology<br />
-									Atlanta, GA, 30332</p>
+									<p> NASA Goddard Space Flight Center <br /> 
+									Building 34, Room S283 <br />
+									Greenbelt, MD, 20771, USA</p>
 									</section>
 
 								</div>
 								<div class="col-6 col-12-narrower">
 
 									<section>
-									<p>Email: <a href="mailto:karur3@gatech.edu">karur3[AT]gatech.edu</a><br />
+									<p>Email: <a href="mailto:karur1@umbc.edu">karur1[AT]umbc.edu</a><br />
+									<p>Email: <a href="mailto:kavitha.arur@nasa.gov">kavitha.arur[AT]nasa.gov</a><br />
 									</section>
 
 								</div>
@@ -68,7 +69,7 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href=""mailto:karur3@gatech.edu"" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href=""mailto:karur1@umbc.edu"" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 
 					<ul class="copyright">
