--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Kavitha Arur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="This is the webpage of Kavitha Arur, CRA postdoctoral fellow at Georgia Institute of Technology."/>
+		<meta name="description" content="This is the webpage of Kavitha Arur, postdoc at UMBC/ NASA Goddard."/>
 		<meta name="keywords" content="Kavitha, Arur, astronomy">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -53,7 +53,9 @@
 					-->
 					<div class="inner">
 							<h2>HELLO! I'm Kavitha Arur</h2>
-						<p>I am currently a postdoctoral research associate at NASA Goddard/ University of Maryland. 
+						<p>I am currently a postdoctoral research associate at NASA Goddard/ University of Maryland,
+						<br />
+						and the lead for the General Observer Facility for IXPE. 
 						<br />
 						I work on X-ray timing analysis from accreting compact objects. 
 						<footer>
