--- a/resources.html
+++ b/resources.html
@@ -43,28 +43,25 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Contact</h2>
+							<h2>Resources</h2>
 						</header>
+						<section class="wrapper style5">
+							<div class="inner">
 
-					<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Address</h3>
-									<p>NASA Goddard Space Flight Center <br>
-										Building 34, Room S283 <br>
-										Greenbelt, MD, 20771, USA. <br></p>
-								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Email</h3>
-									<p> karur1[AT]umbc.edu <br>
-										kavitha.arur[AT]nasa.gov<br></p>
-								</li>
-							</ul>
-						</div>
-					</section>
+								<h3>Career Resources</h3>
+								
+									<ul>
+										<li><a href="https://aas.org/careers/career-in-astronomy">About careers in astronomy.</a> An introduction to a typical career path for those interested in pursuing astronomy.</li>
+										<li><a href="https://astrobites.org/">Astrobites</a></li>
+										<li><a href="https://aas.org/careers/astronomy-powered-careers">Infographic</a> showcasing the wide range of career options outside academia</li>
+									</ul>
 
+								<p>This page is under development. More coming soon!</p>
+
+								<hr />
+
+							</div>
+						</section>
 					</article>
 
 				<!-- Footer -->
