--- a/presenting.html
+++ b/presenting.html
@@ -43,28 +43,19 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Contact</h2>
+							<h2>Better Presenting</h2>
 						</header>
+						<section class="wrapper style5">
+							<div class="inner">
 
-					<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Address</h3>
-									<p>NASA Goddard Space Flight Center <br>
-										Building 34, Room S283 <br>
-										Greenbelt, MD, 20771, USA. <br></p>
-								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Email</h3>
-									<p> karur1[AT]umbc.edu <br>
-										kavitha.arur[AT]nasa.gov<br></p>
-								</li>
-							</ul>
-						</div>
-					</section>
+								<h3>How to give great presentations - workshop</h3>
+								<p>This page is under development. More coming soon!</p>
 
+								<hr />
+
+
+							</div>
+						</section>
 					</article>
 
 				<!-- Footer -->
